Add authentication and roles to all the routes
Add management of permission denied errors

Show sections depending on roles

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -73,6 +73,7 @@
         <div id="sidebar" class="navbar-default sidebar collapse in" role="navigation">
           <div class="sidebar-nav navbar-collapse" id="navbar-left-side-menu">
             <ul class="nav" id="left-side-menu">
+              {% if current_user.has_one_of_these_roles(["administrator", "service_administrator", "operator"]) %}
               <li id="boa-management-menu-li">
                 <a href="#" id="boa-management-menu"><i class="fa fa-wrench fa-fw"></i> BOA management<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" id="boa-management-menu-ul">
@@ -89,18 +90,6 @@
                 <!-- /.nav-second-level -->
               </li>
               <li>
-                <a href="#"><i class="fa fa-clock-o fa-fw"></i> BOA Scheduler<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                  <li>
-                    <a href="/sboa/simulate"><i class="fa fa-fw fa-calculator"></i> Simulate</a>
-                  </li>
-                  <!-- <li> -->
-                  <!--   <a href="/sboa/navigate"><i class="fa fa-table fa-fw"></i> Navigate</a> -->
-                  <!-- </li> -->
-                </ul>
-                <!-- /.nav-second-level -->
-              </li>
-              <li>
                 <a href="#"><i class="fa fa-heart-o fa-fw"></i> BOA Health<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
@@ -109,6 +98,20 @@
                   <li>
                     <a href="/health/health?template=alerts"><i class="fa fa-fw fa-exclamation-triangle"></i> Alerts</a>
                   </li>
+                </ul>
+                <!-- /.nav-second-level -->
+              </li>
+              {% endif %}
+              {% if current_user.has_none_of_these_roles(["observer"]) %}
+              <li>
+                <a href="#"><i class="fa fa-clock-o fa-fw"></i> BOA Scheduler<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                  <li>
+                    <a href="/sboa/simulate"><i class="fa fa-fw fa-calculator"></i> Simulate</a>
+                  </li>
+                  <!-- <li> -->
+                  <!--   <a href="/sboa/navigate"><i class="fa fa-table fa-fw"></i> Navigate</a> -->
+                  <!-- </li> -->
                 </ul>
                 <!-- /.nav-second-level -->
               </li>
@@ -153,6 +156,7 @@
                   </li>
                 </ul>
               </li>
+              {% endif %}
               {% block side_panel_plugins %}{% endblock %}
             </ul>
           </div>
