Add first draft templates for users management view

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -116,6 +116,21 @@
                 <!-- /.nav-second-level -->
               </li>
               <li>
+                <a href="#"><i class="fa fa-users fa-fw"></i> Users management<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                  <li>
+                    <a href="/users-management/uboa-nav"><i class="fa fa-fw fa-user"></i> UBOA navigation </a>
+                  </li>
+                  <li>
+                    <a href="/users-management/import-users"><i class="fa fa-fw fa-download"></i> Import users</a>
+                  </li>
+                  <li>
+                    <a href="/users-management/export-users"><i class="fa fa-fw fa-upload"></i> Export users</a>
+                  </li>
+                </ul>
+                <!-- /.nav-second-level -->
+              </li>
+              <li>
                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Ingestion control<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
