Add query result  table and delete action for users tab in uboa nav

--- a/src/vboa/templates/users_management/query_users.html
+++ b/src/vboa/templates/users_management/query_users.html
@@ -1,6 +1,6 @@
 {% extends "users_management/uboa_query.html" %}
-{% block li_active_events %}class="active"{% endblock %}
-{% block div_active_events %}active{% endblock %}
+{% block li_active_users %}class="active"{% endblock %}
+{% block div_active_users %}active{% endblock %}
 {% block users_nav_content %}
 {% include "users_management/query_users_content.html" %}
 {% endblock %}
