--- a/src/vboa/templates/users_management/users_table_content.html
+++ b/src/vboa/templates/users_management/users_table_content.html
@@ -1,4 +1,4 @@
-<thead>
+  <thead>
     <tr>
       <th class="{{ checkbox_selected }}"></th>
       <th></th>
@@ -6,6 +6,11 @@
       <th>Username</th>
       <th>Group</th>
       <th>Active</th>
+      <th>Previous login date</th>
+      <th>Current login date</th>
+      <th>Previous login IP</th>
+      <th>Current login IP</th>
+      <th>Number of logins</th>
       <th>User UUID</th>
     </tr>
   </thead>
@@ -16,11 +21,24 @@
       <td><i id="expand-user-roles-{{ user.user_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_user_roles('expand-user-roles-{{ user.user_uuid }}', '{{ user.user_uuid }}')" data-toggle="tooltip" title="Click to show the related roles"></i></td>
       <td>{{ user.email }}</td>
       <td>{{ user.username }}</td>
-      <td>{{ user.group }}</td>
+      <td><a href="/users-management/uboa-nav/query-users-by-group/{{ user.group }}">{{ user.group }}</a></td>
       {% if user.active == True %}
       <td><span class='bold-green'>{{ user.active }}</span></td>
       {% else %}
       <td><span class='bold-red'>{{ user.active }}</span></td>
+      {% endif %}
+      {% if user.last_login_at  %}
+      <td>{{ user.last_login_at.isoformat() }}</td>
+      <td>{{ user.current_login_at.isoformat() }}</td>
+      <td>{{ user.last_login_ip }}</td>
+      <td>{{ user.current_login_ip }}</td>
+      <td>{{ user.login_count }}</td>
+      {% else %}
+      <td>Never login</td>
+      <td>Never login</td>
+      <td>Never login</td>
+      <td>Never login</td>
+      <td>Never login</td>
       {% endif %}
       <td>{{ user.user_uuid }}</td>
     </tr>
@@ -34,6 +52,11 @@
         <th>Username</th>
         <th>Group</th>
         <th>Active</th>
+        <th>Previous login date</th>
+        <th>Current login date</th>
+        <th>Previous login IP</th>
+        <th>Current login IP</th>
+        <th>Number of logins</th>
         <th>User UUID</th>
     </tr>
   </tfoot>
