--- a/src/vboa/templates/users_management/users_table_content.html
+++ b/src/vboa/templates/users_management/users_table_content.html
@@ -1,7 +1,7 @@
   <thead>
     <tr>
       <th class="{{ checkbox_selected }}"></th>
-      <th></th>
+      <th>Roles</th>
       <th>Email</th>
       <th>Username</th>
       <th>Group</th>
@@ -47,7 +47,7 @@
   <tfoot>
     <tr>
         <th></th>
-        <th></th>
+        <th>Roles</th>
         <th>Email</th>
         <th>Username</th>
         <th>Group</th>
