--- a/src/vboa/templates/users_management/import_users.html
+++ b/src/vboa/templates/users_management/import_users.html
@@ -33,8 +33,8 @@
     </div>
     <!-- /.panel-heading -->
     <div class="panel-body">
-      <form role="form" id="import-users-operations" method=post action="/users-management/import-users">
-        <textarea id="import-users-textarea" name="import-users" rows="10" cols="100">
+      <form role="form" id="import-users-operations" method=post action="/users-management/import-users/import-manually">
+        <textarea id="import-users-textarea" name="import_users_textarea" rows="10" cols="100">
 "users": [
     {
         "email": "example@test.com",
@@ -47,7 +47,7 @@
             </textarea>
         <div class="row" style="margin-bottom: 20px; margin-top: 20px">
           <div align="center">
-            <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="import-users-from-editor-submit-button" name="import_users_from_editor">Import users</button>
+            <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="import-users-from-editor-submit-button" name="import_users_manually">Import users</button>
           </div>
         </div>
       </form>
@@ -59,9 +59,14 @@
 {{ super() }}
 <script type="text/javascript">
 
-  {% if attempt_import_file == True %}
-  var message_type = {{ error }}
-  vboa.notify_import_file(message_type)
+  {% if attempt_import == True %}
+  {% if error_import == True %}
+  var error = true
+  {% else %}
+  var error = false
+  {% endif %}
+  message = "{{ message }}"
+  vboa.notify_import(message, error)
   {% endif %}
   
 </script>
