--- a/src/vboa/static/css/user.css
+++ b/src/vboa/static/css/user.css
@@ -13,14 +13,8 @@
     vertical-align: middle; 
     text-align: center;
     text-decoration: none;
-
     height: 100px;
     width: 100px; 
-}
-
-#password {
-    -webkit-text-security: disc;
-    -moz-text-security: disc;
 }
 
 .card {
@@ -30,7 +24,6 @@
 .card {
     position: relative;
     display: flex;
-    height: 350px;
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
@@ -38,6 +31,7 @@
     background-clip: border-box;
     border: 0 solid rgba(0,0,0,.125);
     border-radius: .25rem;
+    height: 100%;
 }
 
 .card-body {
@@ -49,14 +43,12 @@
 .gutters-sm {
     margin-right: -8px;
     margin-left: -8px;
+    display: flex;
 }
 
 .gutters-sm>.col, .gutters-sm>[class*=col-] {
     padding-right: 8px;
     padding-left: 8px;
-}
-.mb-3, .my-3 {
-    margin-bottom: 1rem!important;
 }
 
 .bg-gray-300 {
