Change colour of the user avatar

--- a/src/vboa/static/css/user.css
+++ b/src/vboa/static/css/user.css
@@ -1,6 +1,6 @@
 .card-body .icon {
     display: inline-block;
-    background: #337ab7;
+    background: #1089ff;
     border-radius: 50%;
     font-size: 30px;
     margin: 0 auto;
