--- a/src/vboa/templates/users_management/import_users.html
+++ b/src/vboa/templates/users_management/import_users.html
@@ -18,7 +18,7 @@
         <div class="row" >
           <div align="center">
             <label class="btn btn-default btn-file" style="margin-top: 12px">
-            Browse file <input type="file" name="file" style="display: none;">
+            Browse file <input type="file" name="file" style="display: none;" id="import-users-from-file-browse-file">
             </label>
             <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="import-users-from-file-submit-button" name="import_users_from_file">Import users</button>
           </div>
