--- a/src/vboa/templates/user_profile/user_profile.html
+++ b/src/vboa/templates/user_profile/user_profile.html
@@ -32,7 +32,7 @@
                     <div class="mt-3">
                       <h4>{{ user.username }}</h4>
                       <p class="text-muted font-size-sm">{{ user.group }}</p>
-                      <a class="btn btn-success" href="{{ url_for_security('change_password') }}">Change password</a>
+                      <a class="btn btn-success" href="{{ url_for_security('change_password') }}" id="user-profile-change-password-submit-button">Change password</a>
                     </div>
                   </div>
                 </div>
@@ -45,7 +45,7 @@
                     <div class="col-sm-3">
                       <p><b class="mb-0">Email</b></p>
                     </div>
-                    <div class="col-sm-9 text-muted">
+                    <div class="col-sm-9 text-muted" id="email">
                       <p>{{ user.email }}</p>
                     </div>
                   </div>
@@ -54,7 +54,7 @@
                     <div class="col-sm-3">
                       <p><b class="mb-0">Username</b></p>
                     </div>
-                    <div class="col-sm-9 text-muted">
+                    <div class="col-sm-9 text-muted" id="username">
                         <p>{{ user.username }}</p>
                     </div>
                   </div>
@@ -63,7 +63,7 @@
                     <div class="col-sm-3">
                       <p><b class="mb-0">Group</b></p>
                     </div>
-                    <div class="col-sm-9 text-muted">
+                    <div class="col-sm-9 text-muted" id="group">
                         <p>{{ user.group }}</p>
                     </div>
                   </div>
@@ -72,7 +72,7 @@
                     <div class="col-sm-3">
                       <p><b class="mb-0">Roles</b></p>
                     </div>
-                    <div class="col-sm-9 text-muted">
+                    <div class="col-sm-9 text-muted" id="roles">
                         {%for role in user.roles%}
                         <p>{{ role.name }}</p>
                         {% endfor %}
