--- a/src/vboa/templates/users_management/import_users.html
+++ b/src/vboa/templates/users_management/import_users.html
@@ -38,7 +38,8 @@
       </p>
       <form role="form" id="import-users-operations" method=post action="/users-management/import-users/import-manually">
         <textarea style="margin-top: 12px" id="import-users-textarea" name="import_users_textarea" rows="20" cols="100">
-{
+{% if textarea_content %}{{ textarea_content }}
+{% else %}{
   "operations":[
       {
         "mode":"insert",
@@ -61,6 +62,7 @@
       }
   ]
 }
+          {% endif %}
             </textarea>
         <div class="row" style="margin-bottom: 20px; margin-top: 20px">
           <div align="center">
