--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -199,6 +199,9 @@
     <!-- Load the bundle of scripts -->
     <script src="{{ url_for('static', filename='dist/bundle.js') }}" type="text/javascript"></script>
 
+    <!-- Load cesium library which needs to be external to the bundle -->
+    <script src="{{ url_for('static', filename='dist/cesium/Build/Cesium/Cesium.js') }}" type="text/javascript"></script>
+
     {% endblock %}
   </body>
 </html>
