--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -202,6 +202,9 @@
     <!-- Load cesium library which needs to be external to the bundle -->
     <script src="{{ url_for('static', filename='dist/cesium/Build/Cesium/Cesium.js') }}" type="text/javascript"></script>
 
+    <!-- Load cesium library which needs to be external to the bundle -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='dist/cesium/Build/Cesium/Widgets/widgets.css') }}"></script>
+
     {% endblock %}
   </body>
 </html>
